completed flexbox-intro

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <nav>
     <ul class="nav">
         <li><a href="#">Kittens</a></li>
-        <li><a href="#">Puppies</a></li>
+        <li><a href="dogs.html">Puppies</a></li>
         <li><a href="#">Monitor Lizzzerd</a></li>
     </ul>
 </nav>
